--- a/backend/application/bff/build.gradle
+++ b/backend/application/bff/build.gradle
@@ -5,10 +5,7 @@ dependencies {
     // Spring Security
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
-    // JWT
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation project(':public:jwt-token')
 
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
