--- a/backend/public/outbox/build.gradle
+++ b/backend/public/outbox/build.gradle
@@ -3,6 +3,7 @@
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.kafka:spring-kafka")
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     implementation project(':public:primary-id-provider')
     implementation project(":public:infra-messaging")
