--- a/backend/public/outbox/src/main/resources/application.yaml
+++ b/backend/public/outbox/src/main/resources/application.yaml
@@ -3,6 +3,7 @@ spring:
     url: ${OUTBOX_DB_URL}
     username: ${OUTBOX_DB_USERNAME}
     password: ${OUTBOX_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
