--- a/backend/public/outbox/src/main/resources/application.yaml
+++ b/backend/public/outbox/src/main/resources/application.yaml
@@ -7,8 +7,13 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+
 
 outbox:
   kafka:
