--- a/backend/service/auth/build.gradle
+++ b/backend/service/auth/build.gradle
@@ -1,23 +1,27 @@
+
+
+
+
 dependencies {
-
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    implementation 'io.github.cdimascio:dotenv-java:2.3.2'
+
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-
-
-
-    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
-    //from public
     implementation project(':public:outbox')
     implementation project(':public:exception')
     implementation project(':public:primary-id-provider')
 }
+
