FEAT(auth) Controller
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/service/auth/build.gradle
+++ b/backend/service/auth/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation project(':public:outbox')
     implementation project(':public:exception')
     implementation project(':public:primary-id-provider')
+    implementation project (':public:response')
 }
 
