[FEAT](auth): JWT 기반 로그인 및 멀티 디바이스 토큰 관리 기능 구현
- JwtTokenProvider 구현: access/refresh 분리, claim 설정, 예외 래핑
- RefreshTokenService 구현: Redis 기반 device-aware 저장 및 TTL 관리
- AuthService.login() 구현: 사용자 인증, 권한 조회, 토큰 발급 및 저장
- TokenErrorCode 개선: 토큰 발급 실패, 만료, 위조 코드 분리 및 상태코드 매핑
- @PostMapping("/login") 적용 및 예외 응답 구조 정비

Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/public/jwt-token/src/main/resources/application.yml
+++ b/backend/public/jwt-token/src/main/resources/application.yml
@@ -1,3 +1,4 @@
 jwt:
   secret: ${TOKEN_KEY}
-  expiration: ${TOKEN_EXPIRATION}  # 초 단위
+  access-expiration: ${ACCESSTOKEN_EXPIRATION}   # 15 minutes
+  refresh-expiration: ${REFRESHTOKEN_EXPIRATION}
