--- a/backend/service/auth/build.gradle
+++ b/backend/service/auth/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
@@ -24,5 +26,6 @@ dependencies {
     implementation project(':public:exception')
     implementation project(':public:primary-id-provider')
     implementation project (':public:response')
+    implementation project (':public:jwt-token')
 }
 
