--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -22,3 +22,4 @@ include 'service:auth'
 include 'service:mail'
 include 'service:band-room'
 include 'service:image'
+include 'service:user-activity-log'
