[FEAT]: UserProfile 엔티티 생성 및 연관 관심사/장르 필드 추가 - userId 기반 단일 프로필 구조 설계 - 기본 필드(nickname, gender, phoneNumber 등) 정의 - 관심사(userInterests), 장르(userGenres) 리스트 연관관계 추가
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -22,4 +22,5 @@ include 'service:auth'
 include 'service:mail'
 include 'service:band-room'
 include 'service:image'
+include 'service:user-profile'
 include 'service:user-activity-log'
