--- a/backend/service/user-profile/build.gradle
+++ b/backend/service/user-profile/build.gradle
@@ -1,8 +1,7 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.kafka:spring-kafka'
 
@@ -11,13 +10,15 @@ dependencies {
     implementation 'io.github.cdimascio:dotenv-java:2.3.2'
 
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
-
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+
 
 
 
@@ -25,5 +26,7 @@ dependencies {
     implementation project(':public:primary-id-provider')
     implementation project(':public:event')
     implementation project (':public:log-metadata')
+    implementation project (':public:outbox')
+
 
 }
