[FEAT]: 공통 wordFilter 모듈 및 금지어 필터링 기능 도입 - badwords.txt 기반 필터링 로직 구현 - WordFilterTarget으로 필터 대상 구분 - 퍼블릭 모듈로 분리하여 닉네임/댓글/게시글 등에서 재사용 가능
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -11,6 +11,7 @@ include 'public:outbox'
 include 'public:jwt-token'
 include 'public:response'
 include 'public:log-metadata'
+include 'public:word-filter'
 
 
 include 'application'
