--- a/backend/service/user-profile/build.gradle
+++ b/backend/service/user-profile/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation project(':public:event')
     implementation project (':public:log-metadata')
     implementation project (':public:outbox')
+    implementation project(':public:word-filter')
+    implementation project(':public:exception')
 
 
 }
