[FEAT]: DSL기반 리포지토리 구현
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/service/auth/build.gradle
+++ b/backend/service/auth/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation project(':public:outbox')
+    implementation project(':public:event')
     implementation project(':public:exception')
     implementation project(':public:primary-id-provider')
     implementation project (':public:response')
