--- a/backend/service/user-profile/build.gradle
+++ b/backend/service/user-profile/build.gradle
@@ -1,3 +1,13 @@
+def querydslDir = "$buildDir/generated/querydsl"
+
+sourceSets {
+    main {
+        java {
+            srcDirs += [querydslDir]
+        }
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -19,7 +29,11 @@ dependencies {
 
 
 
-
+    //QueryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 
     //내부 모듈
@@ -29,6 +43,12 @@ dependencies {
     implementation project (':public:outbox')
     implementation project(':public:word-filter')
     implementation project(':public:exception')
+    implementation project(':public:response')
 
 
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
 }
