--- a/backend/service/auth/src/main/resources/application.yaml
+++ b/backend/service/auth/src/main/resources/application.yaml
@@ -24,5 +24,5 @@ spring:
       port: ${REDIS_PORT}
 jwt:
   secret: ${TOKEN_KEY}
-  access-expiration: ${ACCESSTOKEN_EXPIRATION}   # 15 minutes
+  access-expiration: ${ACCESSTOKEN_EXPIRATION}
   refresh-expiration: ${REFRESHTOKEN_EXPIRATION}
