[FEAT]: 메일 전송 기능 구현 ,
TODO : URL 링크 구성 정보 정하기 !
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/service/mail/src/main/resources/application.yaml
+++ b/backend/service/mail/src/main/resources/application.yaml
@@ -1,1 +1,30 @@
-내용 추상화..?
+server:
+  port: ${MAIL_SEVER_PORT}
+
+
+spring:
+  kafka:
+    consumer:
+      bootstrap-servers: ${KAFKA_URL}
+      group-id: email-consumer-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    listener:
+      ack-mode: record
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${EMAIL}
+    password: ${EMAIL_PASSWORD}
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+
+
+
+logging:
+  level:
+    org.springframework.kafka: INFO
+    bind.mail: DEBUG
