--- a/backend/service/mail/build.gradle
+++ b/backend/service/mail/build.gradle
@@ -5,9 +5,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation 'org.springframework.kafka:spring-kafka'
 
     implementation project(':public:outbox')
     implementation project(':public:exception')
     implementation project(':public:primary-id-provider')
     implementation project (':public:response')
+    implementation project (':public:event')
 }
