[FIX]: 카프카 소비 로직 수정
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/service/user-activity-log/build.gradle
+++ b/backend/service/user-activity-log/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     implementation project(':public:primary-id-provider')
     implementation project(':public:event')
     implementation project (':public:log-metadata')
+    implementation project(':public:data-serializer')
 
 }
