[FIX]: 카프카 소비 로직 수정
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/public/outbox/build.gradle
+++ b/backend/public/outbox/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     implementation project(':public:primary-id-provider')
-    implementation project(":public:infra-messaging")
+    implementation project(':public:infra-messaging')
     implementation project(':public:data-serializer')
     implementation project(':public:event')
 }
