--- a/backend/service/user-profile/src/main/resources/application.yaml
+++ b/backend/service/user-profile/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: ${USERINFO_SEVER_PORT}
+  port: ${USER_PROFILE_PORT}
 
 spring:
   kafka:
@@ -21,7 +21,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
