--- a/backend/service/image/build.gradle
+++ b/backend/service/image/build.gradle
@@ -22,5 +22,8 @@ dependencies {
     implementation project(':public:exception')
     implementation project(':public:primary-id-provider')
     implementation project (':public:response')
+    implementation project (':public:event')
+    implementation project (':public:infra-messaging')
+    implementation project(':public:data-serializer')
 }
 
