--- a/backend/public/infra-messaging/src/main/resources/application.yaml
+++ b/backend/public/infra-messaging/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ bind:
 
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${KAFKA_URL}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
