--- a/backend/service/auth/src/main/resources/application.yaml
+++ b/backend/service/auth/src/main/resources/application.yaml
@@ -22,6 +22,12 @@ spring:
         enabled: false
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
+  kafka:
+    bootstrap-servers: ${KAFKA_URL}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
 jwt:
   secret: ${TOKEN_KEY}
   access-expiration: ${ACCESSTOKEN_EXPIRATION}
