계약구조조 DTO 변환, bff 초기 설정, 및 서비스 서버와의 연동 확인
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/application/bff/build.gradle
+++ b/backend/application/bff/build.gradle
@@ -19,4 +19,9 @@ dependencies {
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+
+    implementation project(':public:contract')
+    implementation project(':public:response')
+    implementation project(':public:exception')
+    implementation project(':public:jwt-token')
 }
