--- a/backend/service/image/build.gradle
+++ b/backend/service/image/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     implementation project (':public:event')
     implementation project (':public:infra-messaging')
     implementation project(':public:data-serializer')
+    implementation project (':public:contract')
 }
 
