--- a/backend/service/mail/build.gradle
+++ b/backend/service/mail/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     implementation project (':public:event')
     implementation project (':public:infra-messaging')
     implementation project(':public:data-serializer')
+    implementation project (':public:contract')
 }
