[FEAT]: 운영시간 관리를 위한 모듈 추가 - 운영시간 엔티티 및 임시 휴무일 엔티티 정의 - 관련 리포지토리 및 서비스 개발 - REST 컨트롤러를 통한 API 구현 - 신규 API 요청/응답 DTO 정의 - 운영시간 계산 및 유효성 체크 로직 추가 - Redis, Kafka, JPA 등 의존성 설정 완료 - 운영 스케줄 관련 Nginx 설정 파일 추가
Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/settings.gradle
+++ b/backend/settings.gradle
@@ -35,5 +35,4 @@ include 'bandroom:band-room:product-info'
 include 'bandroom:band-room:studio'
 include 'bandroom:reservation'
 include 'bandroom:reservation:booking'
-include 'bandroom:reservation:price-manager'
-include 'bandroom:reservation:time-manager'
+include 'bandroom:operation-hour'
