[FEAT]: Integrate Kakao authentication service and user validation
- Added `KakaoService` for handling Kakao OAuth flow
- Implemented token and user information retrieval from Kakao API
- Created `KakaoLoginController` for Kakao login callback endpoint
- Defined DTOs for Kakao API responses (`KakaoTokenResponseDto`, `KakaoUserInfoResponseDto`)
- Enhanced `AuthService` and `SocialService` for handling social login
- Introduced nickname validation and related API in User Profile service
- Added dependencies for `Redis` and `Kafka` in Booking module setup
- Improved BFF and user profile APIs for better integration and validation handling

Signed-off-by: DDINGJOO <ddingsha9@teambind.co.kr>

--- a/backend/service/auth/src/main/resources/application.yaml
+++ b/backend/service/auth/src/main/resources/application.yaml
@@ -32,3 +32,7 @@ jwt:
   secret: ${TOKEN_KEY}
   access-expiration: ${ACCESSTOKEN_EXPIRATION}
   refresh-expiration: ${REFRESHTOKEN_EXPIRATION}
+
+kakao:
+  client_id: ${KAKAO_REST_API_KEY}
+  redirect_uri_pc: http://119.196.161.182:9101/kakao/callback
