--- a/backend/service/auth/build.gradle
+++ b/backend/service/auth/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     implementation 'io.github.cdimascio:dotenv-java:2.3.2'
