--- a/backend/service/image/build.gradle
+++ b/backend/service/image/build.gradle
@@ -5,6 +5,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    implementation "com.sksamuel.scrimage:scrimage-core:4.0.32"
+    implementation "com.sksamuel.scrimage:scrimage-webp:4.0.32"
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
